--- a/src/company/appsco-company-home-page-actions.html
+++ b/src/company/appsco-company-home-page-actions.html
@@ -5,12 +5,13 @@
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 
 <link rel="import" href="../components/page/appsco-page-global.html">
 <link rel="import" href="../components/components/appsco-search.html">
-
+<link rel="import" href="../components/page/appsco-page-config-dropdown.html">
 
 <dom-module id="appsco-company-home-page-actions">
     <template>
@@ -60,6 +61,10 @@
                 margin-top: -2px;
                 margin-right: 5px;
             }
+            :host .flex-horizontal {
+                @apply(--layout-horizontal);
+                @apply(--layout-center);
+            }
             :host .flex-none {
                 @apply(--layout-flex-none);
             }
@@ -83,9 +88,30 @@
                 </paper-button>
             </div>
 
-            <div class="action flex-none">
-                <appsco-search id="appscoSearch"
-                               label="Search resources"></appsco-search>
+            <div class="flex-horizontal">
+                <div class="action flex-none">
+                    <appsco-search id="appscoSearch"
+                                   label="Search resources"></appsco-search>
+                </div>
+
+                <div class="action flex-none">
+                    <paper-icon-button id="configAction"
+                                       class="config-icon"
+                                       icon="icons:settings"
+                                       alt="Page Settings"
+                                       on-tap="_onShowPageSettings"></paper-icon-button>
+
+                    <appsco-page-config-dropdown
+                            id="resourcePageConfigDropdown"
+                            authorization-token="[[ authorizationToken ]]"
+                            api-errors="[[ apiErrors ]]"
+                            page-config-api="[[ pageConfigApi ]]"
+                            page-config="[[ pageConfig ]]"
+                            page="[[ page ]]"
+                            option-display-list
+                            option-sort
+                    ></appsco-page-config-dropdown>
+                </div>
             </div>
         </div>
 
@@ -100,6 +126,35 @@
             is: 'appsco-company-home-page-actions',
 
             properties: {
+
+                authorizationToken: {
+                    type: String,
+                    value: ''
+                },
+
+                apiErrors: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
+                },
+
+                pageConfigApi: {
+                    type: String,
+                    value: ''
+                },
+
+                pageConfig: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
+                },
+
+                page: {
+                    type: String,
+                    value: ''
+                },
 
                 mobileScreen: {
                     type: Boolean,
@@ -155,12 +210,20 @@
 
             },
 
+            resetPage: function() {
+                this.$$('#appscoSearch').reset();
+            },
+
             _updateScreen: function(mobile, tablet) {
                 this.updateStyles();
             },
 
             _onAddNewFolderAction: function() {
                 this.fire('add-new-folder');
+            },
+
+            _onShowPageSettings: function(event) {
+                this.$$('#resourcePageConfigDropdown').toggle(event.target);
             }
         });
     </script>
