--- a/src/appsco-company-home-page.html
+++ b/src/appsco-company-home-page.html
@@ -174,7 +174,7 @@
                                 is-on-company
                                 authorization-token="[[ authorizationToken ]]"
                                 applications-api="[[ applicationsApi ]]"
-                                account ="[[ account ]]"
+                                account="[[ account ]]"
                                 on-info="_onViewApplicationInfo"
                                 on-edit="_onApplicationEdit"
                                 on-application="_onApplication"
@@ -325,6 +325,14 @@
                     type: String,
                     value: '',
                     observer: '_foldersApiChanged'
+                },
+
+                pageConfig: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    },
+                    observer: '_onPageConfigChanged'
                 },
 
                 _shared: {
@@ -569,6 +577,27 @@
                 this.fire('revoke-application', {
                     application: this.application
                 });
+            },
+
+            _onPageConfigChanged: function(newValue) {
+                newValue = newValue[this.getAttribute('name')];
+
+                if (!newValue) {
+                    return false;
+                }
+
+                var appscoApplicationsComponent = this.$.appscoApplications;
+
+                if (newValue.display_style) {
+                    appscoApplicationsComponent.setDisplayStyle(newValue.display_style);
+                }
+
+                if (newValue.sort_field && newValue.sort_ascending) {
+                    appscoApplicationsComponent.setSort({
+                        orderBy: newValue.sort_field,
+                        ascending: newValue.sort_ascending
+                    });
+                }
             },
 
             setApplication: function(application) {
