--- a/src/appsco-resources-page.html
+++ b/src/appsco-resources-page.html
@@ -545,7 +545,7 @@
                     appscoResourcesComponent.setDisplayStyle(newValue.display_style);
                 }
 
-                if (newValue.sort_field && newValue.sort_ascending) {
+                if (newValue.sort_field && 'undefined' !== typeof newValue.sort_ascending) {
                     appscoResourcesComponent.setSort({
                         orderBy: newValue.sort_field,
                         ascending: newValue.sort_ascending
