DASH-3803 [Frontend][Provisioning] Add Force sync option

--- a/src/appsco-app-header.html
+++ b/src/appsco-app-header.html
@@ -124,6 +124,7 @@
 <link rel="import" href="components/integration/appsco-add-integration-rule.html">
 <link rel="import" href="components/integration/appsco-edit-integration-rule.html">
 <link rel="import" href="components/integration/appsco-run-integration-rule.html">
+<link rel="import" href="components/integration/appsco-run-integration-force-sync.html">
 <link rel="import" href="components/integration/appsco-remove-integration-rule.html">
 <link rel="import" href="components/integration/appsco-register-integration-webhook.html">
 <link rel="import" href="components/integration/appsco-unregister-integration-webhook.html">
