DASH-3817 [Frontend][Dashboard] Share button does not react on first click

--- a/src/appsco-company-home-page.html
+++ b/src/appsco-company-home-page.html
@@ -570,7 +570,9 @@
             },
 
             _onShareApplication: function() {
-                this.fire('share-application');
+                this.fire('share-application', {
+                    application: this.application
+                });
             },
 
             _onRevokeApplication: function() {
