--- a/src/appsco-home-page.html
+++ b/src/appsco-home-page.html
@@ -290,6 +290,9 @@
 
                 application: {
                     type: Object,
+                    value: function () {
+                        return {};
+                    },
                     notify: true
                 },
 
@@ -521,7 +524,9 @@
             },
 
             _onShareApplication: function() {
-                this.fire('share-application');
+                this.fire('share-application', {
+                    application: this.application
+                });
             },
 
             _onRevokeApplication: function() {
