--- a/src/appsco-contact-home-page.html
+++ b/src/appsco-contact-home-page.html
@@ -458,7 +458,9 @@
             },
 
             _onShareApplication: function() {
-                this.fire('share-application');
+                this.fire('share-application', {
+                    application: this.application
+                });
             },
 
             _onApplicationRemoved: function() {
