DASH-3822 [Frontend][Policies report] Modify text on policies report when there are no broken policies

--- a/src/appsco-policies-report-page.html
+++ b/src/appsco-policies-report-page.html
@@ -59,7 +59,7 @@
                 <div class="content-container">
                     <appsco-policy-report-roles
                             id="appscoPolicyReportRoles"
-                            type="account"
+                            type="policy-report"
                             size="100"
                             load-more
                             authorization-token="[[ authorizationToken ]]"
